# bloog

./: .gitignore  Cargo.toml  Dockerfile  README.md  score-editor.yaml  score-viewer.yaml
.github/workflows/: ci.yaml
.run/: Run bloog editor.run.xml  Run bloog viewer.run.xml
src/: conversion.rs  customhttptrace.rs  editor.rs  htmx.rs  main.rs  path_utils.rs  pathutils.rs  statics.rs  store.rs  viewer.rs  viewhelpers.rs
src/editor/: views.rs
src/viewer/: views.rs
