[package]
name = "bloog"
version = "0.6.1"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["multipart", "macros", "form"] }
base64 = { version = "0.22.1" }
chrono = { version = "0.4.39" , features = ["serde", "rkyv-64", "alloc"]}
clap = { version = "4.5.27", features = ["derive", "env", "error-context", "help", "std", "usage", "cargo"], default-features = false }
futures = { version = "0.3.31" }
image = { version = "0.25.5", features = ["jpeg", "png", "webp"] }
itertools = { version = "0.14.0" }
maud = { version = "0.27.0", features = ["axum"] }
object_store = { version = "0.11.2" , features = ["cloud", "http", "aws"]}
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.4" }
serde = { version = "1.0.217", features = ["derive"] }
anyhow = { version = "1.0.95" }
postcard = { version = "1.1.1", features = ["use-std"]}
lazy_static = { version = "1.5.0" }
bytes = { version = "1.9.0" }
pulldown-cmark = { version = "0.12.2", features = ["html"] }
xmlparser = { version = "0.13.6" }
log = { version = "0.4.22" }
env_logger = { version = "0.11.6" , default-features = false, features = ["humantime"]}
rust-embed = { version = "8.5.0", features = ["mime-guess"] }
