[package]
name = "bloog"
version = "0.6.1"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["multipart", "macros", "form"] }
base64 = { version = "0.22.1" }
chrono = { version = "0.4.39" , features = ["serde", "rkyv-64", "alloc"]}
clap = { version = "4.5.27", features = ["derive", "env", "error-context", "help", "std", "usage", "cargo"], default-features = false }
futures = { version = "0.3.31" }
image = { version = "0.25.5", features = ["jpeg", "png", "webp"] }
itertools = { version = "0.14.0" }
maud = { version = "0.27.0", features = ["axum"] }
object_store = { version = "0.11.2" , features = ["cloud", "http", "aws"]}
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.4" }
serde = { version = "1.0.217", features = ["derive"] }
anyhow = { version = "1.0.95" }
postcard = { version = "1.1.1", features = ["use-std"]}
lazy_static = { version = "1.5.0" }
bytes = { version = "1.9.0" }
pulldown-cmark = { version = "0.12.2", features = ["html"] }
xmlparser = { version = "0.13.6" }
log = { version = "0.4.22" }
rust-embed = { version = "8.5.0", features = ["mime-guess"] }
# Provides the API component of OTEL
opentelemetry = { version = "0.28.0", default-features = false, features = ["trace"] }
# Provides the SDK implementations of the OTEL API
opentelemetry_sdk = { version = "0.28.0", default-features = false, features = ["trace", "logs"] }
# Provides the tracing layer for OTEL
tracing-opentelemetry = { version = "0.29.0", default-features = false}
# Provides the network transport for OTEL
opentelemetry-otlp = { version = "0.28.0", default-features = false, features = ["trace", "http-proto", "reqwest-blocking-client"] }
# Provides the Rust APIs and macros for tracing
tracing = { version = "0.1.41" }
# Provides the Rust apis for a global subscriber listing for spans.
tracing-subscriber = { version = "0.3.19" , default-features = false, features = ["std", "fmt", "ansi", "registry", "env-filter"]}
# Provides the axum middleware for emitting spans
tower-http = { version = "0.6.2", default-features = false, features = ["trace"] }
http = { version = "1.2.0" }
